--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -33,15 +33,15 @@ jobs:
         type: 'zip'
         path: 'Output'
         filename: 'ImportCertificate.zip'
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
+    - name: Publish to PSGallery
+      # You may pin to the exact commit or the version.
+    # uses: aammirmirza/Publish2PSGallery@3371e5207343b1f0d850b2abf1159b0edd40f570
+      uses: aammirmirza/Publish2PSGallery@PSGallery_v2
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ImportCertificate.zip
-        asset_name: mything
-        tag: ${{ github.ref }}
-        overwrite: true
-        body: "This is my release text"
+        # The NuGet API Key for PowerShell Gallery, with permission to push this module. You can fetch this from your PSGallery profile.
+        NuGetApiKey: ${{ secrets.PSGALLERY_APIKEY }}
+        # The filesystem path to the module to publish. It is directories that contains a .psd1.
+        modulePath: ./output/ImportCertificate
   publish2:
     name: Run buildfail
     needs: 
